--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "dependencies": {
     "@coreui/coreui": "^4.1.6",
     "@coreui/react": "^4.2.2",
+    "@coreui/react-chartjs": "^2.0.3",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@material-table/core": "^5.0.2",
     "@material-table/exporters": "^1.0.12",
+    "@mui/material": "^5.8.5",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
+    "chart.js": "^3.8.0",
     "dotenv": "^16.0.1",
     "env-cmd": "^10.1.0",
     "particlesjs": "^2.2.3",
@@ -22,6 +27,7 @@
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.1.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
